# speaki-box

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  build.rs  index.html
.github/workflows/: build.yml  pages.yml
assets/: speaki-box.desktop
src/: components.rs  events.rs  main.rs  resources.rs
src/systems/: animation.rs  audio.rs  input.rs  mod.rs  physics.rs  ui.rs
