[package]
name = "speaki-box"
version = "0.1.9"
edition = "2024"
authors = ["Levi Lim <shiueo.csh@gmail.com>"]
repository = "https://github.com/levish0/speaki-box"
rust-version = "1.92.0"
description = "스삐끼 네르지 마세요"

[dependencies]
bevy = { version = "0.17.3", default-features = false, features = [
    "android-game-activity",
    "android_shared_stdcxx",
    "animation",
    "async_executor",
    "bevy_anti_alias",
    "bevy_asset",
    "bevy_camera",
    "bevy_color",
    "bevy_core_pipeline" ,
    "bevy_gilrs",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_image",
    "bevy_input_focus" ,
    "bevy_light",
    "bevy_log",
    "bevy_mesh" ,
    "bevy_mesh_picking_backend",
    "bevy_pbr",
    "bevy_picking" ,
    "bevy_post_process" ,
    "bevy_render",
    "bevy_scene",
    "bevy_shader" ,
    "bevy_sprite" ,
    "bevy_sprite_picking_backend",
    "bevy_sprite_render",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "bevy_ui_picking_backend",
    "bevy_ui_render",
    "bevy_window",
    "bevy_winit",
    "custom_cursor" ,
    "debug",
    "default_font" ,
    "hdr",
    "ktx2",
    "multi_threaded" ,
    "png" ,
    "reflect_auto_register",
    "smaa_luts" ,
    "std",
    "sysinfo_plugin",
    "tonemapping_luts",
    "wayland",
    "webgl2" ,
    "x11",
    "zstd_rust" ,
] }
rand = "0.9.2"
bevy_kira_audio = { version = "0.24.0", features = ["mp3"] }
bevy_egui = "0.38.1"
bevy_embedded_assets = "0.14.0"
image = { version = "0.25", default-features = false, features = ["png"] }
winit = "0.30"

[build-dependencies]
winres = "0.1"

[package.metadata.bundle]
name = "Speaki Box"
identifier = "com.levish.speakibox"
icon = ["assets/logo.png"]
category = "Game"
short_description = "A pet 'BOX' featuring Speaki(스피키) characters with physics simulation."