[package]
name = "speaki-box"
version = "0.2.3"
edition = "2024"
authors = ["Levi Laine <shiueo.csh@gmail.com>"]
repository = "https://github.com/levish0/speaki-box"
rust-version = "1.92.0"
description = "스삨이 네르지 마세요"

[features]
default = ["native"]
native = [
    "bevy/bevy_gilrs",
    "bevy/multi_threaded",
    "bevy/sysinfo_plugin",
    "bevy/wayland",
    "bevy/x11",
]

[dependencies]
bevy = { version = "0.18.0", default-features = false, features = [
    "gltf_animation",
    "async_executor",
    "bevy_anti_alias",
    "bevy_asset",
    "bevy_camera",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gizmos",
    "bevy_gltf",
    "bevy_image",
    "bevy_input_focus",
    "bevy_light",
    "bevy_log",
    "bevy_mesh",
    "mesh_picking",
    "bevy_pbr",
    "bevy_picking",
    "bevy_post_process",
    "bevy_render",
    "bevy_scene",
    "bevy_shader",
    "bevy_sprite",
    "sprite_picking",
    "bevy_sprite_render",
    "bevy_state",
    "bevy_text",
    "bevy_ui",
    "ui_picking",
    "bevy_ui_render",
    "bevy_window",
    "bevy_winit",
    "custom_cursor",
    "debug",
    "default_font",
    "hdr",
    "ktx2",
    "png",
    "reflect_auto_register",
    "smaa_luts",
    "std",
    "tonemapping_luts",
    "webgl2",
    "zstd_rust",
] }
rand = "0.10.0"
bevy_kira_audio = { version = "0.25.0", features = ["mp3"] }
bevy_egui = "0.39.1"
bevy_embedded_assets = "0.15.0"

# WASM: getrandom needs wasm_js feature for browser RNG
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }

# Native-only dependencies (icon setting)
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }
winit = "0.30"

# Windows-only build dependency
[target.'cfg(windows)'.build-dependencies]
winres = "0.1"

[package.metadata.bundle]
name = "Speaki Box"
identifier = "com.levish.speakibox"
icon = ["assets/logo.png"]
category = "Game"
short_description = "A pet 'BOX' featuring Speaki(스피키) characters with physics simulation."
